fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/Go_Deep_Record__c.object-meta.xml
<CustomObject>
    <label>Go Deep Record</label>
    <nameField>
        <displayFormat>GoDeep-{0000}</displayFormat>
        <label>Go Deep Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Go Deep Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>