fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Account_Champion_to_Promote_Training_fro__c.field-meta.xml
<CustomField>
    <fullName>Account_Champion_to_Promote_Training_fro__c</fullName>
    <description>Do you have a champion within account who will promote training from within?</description>
    <inlineHelpText>Do you have a champion within account who will promote training from within?</inlineHelpText>
    <label>Account Champion to Promote Training fro</label>
    <type>TextArea</type>
</CustomField>