fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Account_contact_to_determine_goals__c.field-meta.xml
<CustomField>
    <fullName>Account_contact_to_determine_goals__c</fullName>
    <description>Work with account contact to determine goals of the training</description>
    <inlineHelpText>Work with account contact to determine goals of the training</inlineHelpText>
    <label>Account contact to determine goals</label>
    <type>TextArea</type>
</CustomField>