fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Active_Credential_for_hospital_training__c.field-meta.xml
<CustomField>
    <fullName>Active_Credential_for_hospital_training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is your credentialing up-to-date for hospital training?</description>
    <inlineHelpText>Is your credentialing up-to-date for hospital training?</inlineHelpText>
    <label>Active Credential for hospital training</label>
    <type>Checkbox</type>
</CustomField>