fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/An_IO_is_placed_who_typically_place__c.field-meta.xml
<CustomField>
    <fullName>An_IO_is_placed_who_typically_place__c</fullName>
    <description>When an IO is placed who typically places them?</description>
    <inlineHelpText>When an IO is placed who typically places them? List: RN, MD, PA, NP</inlineHelpText>
    <label>When an IO is placed then who places it</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>