fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Anything_about_EZIO_your_not_comfortable__c.field-meta.xml
<CustomField>
    <fullName>Anything_about_EZIO_your_not_comfortable__c</fullName>
    <inlineHelpText>Pre: Is there anything about EZ-IO that you aren’t comfortable with?	Blank - write out response</inlineHelpText>
    <label>Anything about EZIO your not comfortable</label>
    <type>TextArea</type>
</CustomField>