fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Ask_questions_to_determine_size_of_oppor__c.field-meta.xml
<CustomField>
    <fullName>Ask_questions_to_determine_size_of_oppor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ask questions to determine size of opportunity?</description>
    <inlineHelpText>Ask questions to determine size of opportunity?</inlineHelpText>
    <label>Ask questions to determine size of oppor</label>
    <type>Checkbox</type>
</CustomField>