fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/ASR_ISR_to_follow_up__c.field-meta.xml
<CustomField>
    <fullName>ASR_ISR_to_follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ASR or ISR to follow up?</inlineHelpText>
    <label>ASR/ISR to follow up?</label>
    <type>Checkbox</type>
</CustomField>