fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Clinicians_Anticipated_per_Trai__c.field-meta.xml
<CustomField>
    <fullName>Clinicians_Anticipated_per_Trai__c</fullName>
    <description>How many clinicians anticipated per training?</description>
    <label>Clinicians Anticipated Per Training</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>