fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Determine_the_type_of_training_is_needed__c.field-meta.xml
<CustomField>
    <fullName>Determine_the_type_of_training_is_needed__c</fullName>
    <description>Determine what type of training is needed: hands-on? CE? CAM? Virtual? Example: Hands-on, CE, CAM, virtual</description>
    <inlineHelpText>Determine what type of training is needed: hands-on? CE? CAM? Virtual? Example: Hands-on, CE, CAM, virtual</inlineHelpText>
    <label>Determine the type of training needed*</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hands-On</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>