fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Do_You_Have_literature_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Do_You_Have_literature_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have literature ordered?</description>
    <label>Do You Have literature Ordered</label>
    <type>Checkbox</type>
</CustomField>