fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Drop_off_literature__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_literature__c</fullName>
    <label>Drop off literature</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pocket guide</fullName>
            </value>
            <value>
                <fullName>EZ-IO brochure</fullName>
            </value>
            <value>
                <fullName>PH brochure</fullName>
            </value>
            <value>
                <fullName>Pediatric brochure</fullName>
            </value>
            <value>
                <fullName>Spec Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>