fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Go_Deep_Description__c.field-meta.xml
<CustomField>
    <fullName>Go_Deep_Description__c</fullName>
    <formula>Opportunity__r.Name&amp;&quot;-&quot;&amp; TEXT(Opportunity__r.Business_Unit_GPL__c)</formula>
    <label>Go Deep Description</label>
    <type>Text</type>
</CustomField>