fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Have_you_met_with_materials_management__c.field-meta.xml
<CustomField>
    <fullName>Have_you_met_with_materials_management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you met with materials management?</label>
    <type>Checkbox</type>
</CustomField>