fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Have_you_set_the_follow_up_expectation__c.field-meta.xml
<CustomField>
    <fullName>Have_you_set_the_follow_up_expectation__c</fullName>
    <description>Have you set the follow up expectation? (ex: 2 weeks after education check in to review new cases where EZ-IO used or could have been used, why/why not?)</description>
    <label>Have you set the follow up expectation?</label>
    <type>TextArea</type>
</CustomField>