fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Have_You_Submitted_Training_Form_To_CAM__c.field-meta.xml
<CustomField>
    <fullName>Have_You_Submitted_Training_Form_To_CAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you submitted training needs form to CAM?</description>
    <inlineHelpText>Have you submitted training needs form to CAM?</inlineHelpText>
    <label>Have You Submitted Training Form To CAM</label>
    <type>Checkbox</type>
</CustomField>