fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/How_many_IOs_placed_in_the_last_month__c.field-meta.xml
<CustomField>
    <fullName>How_many_IOs_placed_in_the_last_month__c</fullName>
    <label>How many IOs placed in the last month?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>