fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/How_many_new_clinicians_used_by_EZIO__c.field-meta.xml
<CustomField>
    <fullName>How_many_new_clinicians_used_by_EZIO__c</fullName>
    <description>How many potential new users?</description>
    <inlineHelpText>How many potential new users?</inlineHelpText>
    <label>How many potential new users?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>