fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/How_many_times_IV_team_called_last_month__c.field-meta.xml
<CustomField>
    <fullName>How_many_times_IV_team_called_last_month__c</fullName>
    <description>How many times last month was the IV team requested? (when they were called, how many of those situations were urgent?)</description>
    <inlineHelpText>How many times last month was the IV team requested? (when they were called, how many of those situations were urgent?)</inlineHelpText>
    <label>How many times IV team called last month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>