fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Identified_superusers__c.field-meta.xml
<CustomField>
    <fullName>Identified_superusers__c</fullName>
    <label>Identified superusers</label>
    <type>TextArea</type>
</CustomField>