fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Identify_Accounts_needs__c.field-meta.xml
<CustomField>
    <fullName>Identify_Accounts_needs__c</fullName>
    <label>Identify Accounts needs*</label>
    <type>TextArea</type>
</CustomField>