fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Infection_Control__c.field-meta.xml
<CustomField>
    <fullName>Infection_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infection Control?</label>
    <type>Checkbox</type>
</CustomField>