fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Is_a_date_set__c.field-meta.xml
<CustomField>
    <fullName>Is_a_date_set__c</fullName>
    <description>Is a date set?</description>
    <label>Is a date set</label>
    <type>Date</type>
</CustomField>