fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Is_it_provider_choice_on_when_to_grab_IO__c.field-meta.xml
<CustomField>
    <fullName>Is_it_provider_choice_on_when_to_grab_IO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it provider preference for when to grab IO?</description>
    <inlineHelpText>Is it provider preference for when to grab IO?</inlineHelpText>
    <label>Is it provider choice on when to grab IO</label>
    <type>Checkbox</type>
</CustomField>