fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Is_policy_in_place_or_need_help_from_CAM__c.field-meta.xml
<CustomField>
    <fullName>Is_policy_in_place_or_need_help_from_CAM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the policy already in place or do they need help from CAM?</inlineHelpText>
    <label>Is policy in place or need help from CAM</label>
    <type>Checkbox</type>
</CustomField>