fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Items_To_Follow_That_Came_Up_In_Training__c.field-meta.xml
<CustomField>
    <fullName>Items_To_Follow_That_Came_Up_In_Training__c</fullName>
    <description>Any new items to follow up on that came up during training?</description>
    <inlineHelpText>Any new items to follow up on that came up during training?</inlineHelpText>
    <label>Items To Follow That Came Upon Training*</label>
    <type>TextArea</type>
</CustomField>