fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Materials_Management__c.field-meta.xml
<CustomField>
    <fullName>Materials_Management__c</fullName>
    <description>Materials Management : Par levels for needles in unit?</description>
    <label>Materials Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>