fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Materials_Management_Follow_up_needed__c.field-meta.xml
<CustomField>
    <fullName>Materials_Management_Follow_up_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Materials Management : Any follow up needed after training? Supplies requested, etc?</inlineHelpText>
    <label>Materials Management:Follow up needed?</label>
    <type>Checkbox</type>
</CustomField>