fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Needs_determined_in_training_by_attendee__c.field-meta.xml
<CustomField>
    <fullName>Needs_determined_in_training_by_attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Follow up on any needs determined during training by attendees (stabilizers, plus packs, new drivers, wall mounts, code carts?)</inlineHelpText>
    <label>Needs determined in training by attendee</label>
    <type>Checkbox</type>
</CustomField>