fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/New_users_or_expanding_IO_competency__c.field-meta.xml
<CustomField>
    <fullName>New_users_or_expanding_IO_competency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New users or expanding IO competency?</label>
    <type>Checkbox</type>
</CustomField>