fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Number_Of_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Trainings__c</fullName>
    <description># of trainings (one time, quarterly, annually, etc.)</description>
    <inlineHelpText># of trainings (one time, quarterly, annually, etc.)</inlineHelpText>
    <label>Number Of Trainings*</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>