fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Plus_packs_being_used__c.field-meta.xml
<CustomField>
    <fullName>Plus_packs_being_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plus packs being used?</label>
    <type>Checkbox</type>
</CustomField>