fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Post_Did_all_your_concerns_are_addressed__c.field-meta.xml
<CustomField>
    <fullName>Post_Did_all_your_concerns_are_addressed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Post: Have all of your concerns been addressed?</inlineHelpText>
    <label>Post:Did all your concerns are addressed</label>
    <type>Checkbox</type>
</CustomField>