fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Post_Landmarking_PH_on_next_10_Patients__c.field-meta.xml
<CustomField>
    <fullName>Post_Landmarking_PH_on_next_10_Patients__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post: Consider landmarking PH on next 10 patients ?</description>
    <inlineHelpText>Post: Consider landmarking PH on next 10 patients ?</inlineHelpText>
    <label>Post: Landmarking PH on next 10 Patients</label>
    <type>Checkbox</type>
</CustomField>