fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Pre_Anything_about_EZIO_not_comfort__c.field-meta.xml
<CustomField>
    <fullName>Pre_Anything_about_EZIO_not_comfort__c</fullName>
    <description>Pre: Is there anything about EZ-IO that you aren’t comfortable with?</description>
    <inlineHelpText>Pre: Is there anything about EZ-IO that you aren’t comfortable with?</inlineHelpText>
    <label>Pre:Anything about EZIO not comfort</label>
    <type>TextArea</type>
</CustomField>