fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Pre_What_site_are_you_using_most_often__c.field-meta.xml
<CustomField>
    <fullName>Pre_What_site_are_you_using_most_often__c</fullName>
    <description>List: PH, PT, DT, DF (peds)</description>
    <inlineHelpText>List: PH, PT, DT, DF (peds)</inlineHelpText>
    <label>Pre: What site are you using most often?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>