fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Pre_Where_Is_The_EZ_IO_Kept__c.field-meta.xml
<CustomField>
    <fullName>Pre_Where_Is_The_EZ_IO_Kept__c</fullName>
    <description>Pre: Do you know where your EZ-IO is kept?</description>
    <inlineHelpText>Pre: Do you know where your EZ-IO is kept?</inlineHelpText>
    <label>Pre: Where Is The  EZ-IO Kept</label>
    <type>TextArea</type>
</CustomField>