fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Pre_Who_has_placed_an_IO_prior_to_train__c.field-meta.xml
<CustomField>
    <fullName>Pre_Who_has_placed_an_IO_prior_to_train__c</fullName>
    <inlineHelpText>Pre: Who has placed an IO prior to training?</inlineHelpText>
    <label>Pre:Who has placed IO prior to training</label>
    <type>TextArea</type>
</CustomField>