fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Risk_Management__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Management?</label>
    <type>Checkbox</type>
</CustomField>