fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Send_Online_Education_resources__c.field-meta.xml
<CustomField>
    <fullName>Send_Online_Education_resources__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send supplementary online education resources</description>
    <inlineHelpText>Send supplementary online education resources</inlineHelpText>
    <label>Send Online Education Resources*</label>
    <type>Checkbox</type>
</CustomField>