fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Shadow_day__c.field-meta.xml
<CustomField>
    <fullName>Shadow_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shadow day</label>
    <type>Checkbox</type>
</CustomField>