fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <label>Test</label>
    <type>Text</type>
</CustomField>