fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Touches_Others__c.field-meta.xml
<CustomField>
    <fullName>Touches_Others__c</fullName>
    <inlineHelpText>List: literature drops, note, clinical paper, card leave-behind, EZ-IO logo post it</inlineHelpText>
    <label>Touches - Others</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Literature drops,</fullName>
            </value>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Clinical paper</fullName>
            </value>
            <value>
                <fullName>Card Leave-behind</fullName>
            </value>
            <value>
                <fullName>EZ-IO logo post it</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>