fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Train_on_conscious_alert_patients__c.field-meta.xml
<CustomField>
    <fullName>Train_on_conscious_alert_patients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Train on conscious/alert patients?</label>
    <type>Checkbox</type>
</CustomField>