fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Train_on_new_landmark__c.field-meta.xml
<CustomField>
    <fullName>Train_on_new_landmark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Train on new landmark?</label>
    <type>Checkbox</type>
</CustomField>