fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Training_Room_with_Audio_Video__c.field-meta.xml
<CustomField>
    <fullName>Training_Room_with_Audio_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Room for training with Audio/Video capability identified if using presentation?</description>
    <inlineHelpText>Room for training with Audio/Video capability identified if using presentation?</inlineHelpText>
    <label>Training Room with Audio/Video</label>
    <type>Checkbox</type>
</CustomField>