fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Training_with_CAM_for_bes_education_plan__c.field-meta.xml
<CustomField>
    <fullName>Training_with_CAM_for_bes_education_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set up training with CAM to determine best education plan</description>
    <inlineHelpText>Set up training with CAM to determine best education plan</inlineHelpText>
    <label>Training with CAM for bes education plan</label>
    <type>Checkbox</type>
</CustomField>