fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/What_is_the_current_IO_policy__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_current_IO_policy__c</fullName>
    <label>What is the current IO policy?</label>
    <type>TextArea</type>
</CustomField>