fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/What_sites_are_being_used__c.field-meta.xml
<CustomField>
    <fullName>What_sites_are_being_used__c</fullName>
    <label>What sites are being used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DF</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>