fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Where_is_EZ_IO_kept_moved_to_new_locat__c.field-meta.xml
<CustomField>
    <fullName>Where_is_EZ_IO_kept_moved_to_new_locat__c</fullName>
    <description>Where is the EZ-IO kept? Does it need to be moved to new location?</description>
    <inlineHelpText>Where is the EZ-IO kept? Does it need to be moved to new location?</inlineHelpText>
    <label>Where is EZ-IO kept &amp; moved to new locat</label>
    <type>TextArea</type>
</CustomField>