fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/Whom_will_be_be_training__c.field-meta.xml
<CustomField>
    <fullName>Whom_will_be_be_training__c</fullName>
    <description>Whom will be be training? (EMS/RN/NP/PA/MD)</description>
    <inlineHelpText>Whom will be be training? (EMS/RN/NP/PA/MD)</inlineHelpText>
    <label>Whom will be be training?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>