fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/X1_day_and_30_day_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X1_day_and_30_day_follow_up__c</fullName>
    <description>1 day and  30 day follow up with contact who scheduled training and all who attend a TTT training</description>
    <inlineHelpText>1 day and  30 day follow up with contact who scheduled training and all who attend a TTT training</inlineHelpText>
    <label>1 day and  30 day follow up</label>
    <type>Date</type>
</CustomField>