fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/X60_day_and_90_day_follow_up__c.field-meta.xml
<CustomField>
    <fullName>X60_day_and_90_day_follow_up__c</fullName>
    <inlineHelpText>60 day and 90 day follow up with attendees from training Determine if more hands-on training is necessary for THIS GROUP (new opportunity should be created for new group)</inlineHelpText>
    <label>60 day and 90 day follow up</label>
    <type>Date</type>
</CustomField>