fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/fields/you_gained_clinical_buy_in_from_customer__c.field-meta.xml
<CustomField>
    <fullName>you_gained_clinical_buy_in_from_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you gained clinical buy in from customer?</description>
    <inlineHelpText>Have you gained clinical buy in from customer?</inlineHelpText>
    <label>Gained Clinical Buy In From Customer?</label>
    <type>Checkbox</type>
</CustomField>