fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/recordTypes/EMS.recordType-meta.xml
<RecordType>
    <fullName>EMS</fullName>
    <active>true</active>
    <label>EMS</label>
</RecordType>