fullSandbox11072023/force-app/main/default/objects/Go_Deep_Record__c/recordTypes/Hospital.recordType-meta.xml
<RecordType>
    <fullName>Hospital</fullName>
    <active>true</active>
    <label>Hospital</label>
</RecordType>